--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                     <div style="font-size: 18px; font-weight: bold; background: #fff; padding: 2px 5px; border-radius: 4px;">~450 KM</div>
                     
                     <div style="font-size: 12px; margin-top: 15px; width: 100%; text-align: left; padding-left: 10px;">
-                        <div style="margin-bottom: 5px;">📞 VC: ⭐⭐⭐⭐⭐</div>
+                        <div style="margin-bottom: 5px;">📞 Telpon: ⭐⭐⭐⭐⭐</div>
                         <div style="margin-bottom: 5px;">💬 Chat: ∞</div>
                         <div>🥺 Rindu: 💯%</div>
                     </div>
